<resources>
    <string name="app_name">Open Sesame</string>
    <string name="open_sesame_logo">Open Sesame Logo</string>
    <string name="get_started">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_account">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="location_name">Location Name (ex. Roscoe\'s)</string>
    <string name="add_location">Add Location</string>
    <string name="menu_title">Add New Location</string>
    <string name="log_out">Log Out</string>
    <string name="add_first_location">Add a new location using the + icon!</string>
    <string name="add_location_button">Add Location</string>
    <string name="group_name">Group Name (ex. Dog Friendly Bars)</string>
    <string name="see_what_s_open_now">See What\'s Open Now</string>
    <string name="see_what_s_open_later">See What\'s Open Later</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="see_what_s_open">See What Will Be Open</string>
    <string name="add_to_calendar">add to calendar</string>
    <string name="add_event_to_calendar">Add Event to Calendar</string>
    <string name="delete_location">Delete Location</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
