<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SelectDayTimeActivity">

    <Button
        android:id="@+id/select_day_time_text"
        android:text="@string/select_date"
        android:fontFamily="@font/poppins"
        android:textColor="@color/softBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:background="@drawable/button_light_background"/>

    <Button
        android:id="@+id/select_time_text"
        android:fontFamily="@font/poppins"
        android:text="@string/select_time"
        android:textColor="@color/softBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:background="@drawable/button_light_background"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/select_day_time_go_to_locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_what_s_open"
        android:layout_marginTop="36dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:visibility="invisible"/>

</LinearLayout>