<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="18dp"
    tools:context=".AddLocationActivity">

    <fragment android:id="@+id/autocomplete_fragment"
        android:hint="@string/location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment" />


    <AutoCompleteTextView
        android:id="@+id/groupNameAutoComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:paddingLeft="63dp"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textColorHint="@color/hintColor"
        android:background="@android:color/transparent"
        android:hint="@string/group_name" />

    <Button
        android:id="@+id/addLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:background="@drawable/button_background"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/add_location" />



    <ProgressBar
        android:id="@+id/addLocationProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="208dp" />

</LinearLayout>